--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,560 @@
-body {
-    text-align: center;
-    background-color: lightblue;
+:root {
+  --gradient: conic-gradient(
+    from 240deg at 50% 50%,
+    #00ffc3, #00fad9, #00f4f0, #00eeff,
+    #00e6ff, #00dcff, #00d2ff, #00c5ff
+  );
 }
+
+*, *::before, *::after { box-sizing: border-box; }
+
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: linear-gradient(to bottom, #eef2f3, #b9d8e8);
+    color: #333;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 200px;
+    min-height: 100vh;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    transition: background 0.3s ease, color 0.3s ease;
+}
+
+body::before, body::after {
+    content: '';
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 3px;
+    background-color: #000000;
+    z-index: -1;
+}
+
+body::before {
+    left: 150px;
+}
+
+body::after {
+    right: 150px;
+}
+
+.simple-nav {
+    width: 100%;
+    background-color: #0d2c54;
+    padding: 0.5rem 0;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.simple-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem; 
+}
+
+.simple-nav li a {
+    display: block;
+    color: #FFFFFF; 
+    text-decoration: none;
+    font-size: 1.1rem;
+    font-weight: 500;
+    padding: 0.75rem 1.5rem;
+    border-radius: 5px;
+    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+
+.simple-nav li.active a {
+    background-color: #ffffff;
+    color: #0d2c54; 
+    font-weight: 700;
+}
+
+.simple-nav li:not(.active) a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.header {
+    max-width: 1200px;
+    margin: 60px auto 40px auto;
+    padding: 0 40px;
+}
+
+.header h1 {
+    font-size: 52px;
+    text-align: center;
+    margin: 0 0 20px 0;
+}
+
+.header h2 {
+    font-size: 26px;
+    font-weight: 400;
+    margin: 0;
+    text-align: left;
+}
+
+
+.project {
+    max-width: 1200px;
+    margin: 0 auto 60px auto;
+    padding: 0 40px;
+}
+
+.project h3 {
+    font-size: 32px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.project-content {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.project-content p {
+    flex: 1;
+    font-size: 18px;
+    line-height: 1.7;
+    text-align: left;
+}
+
+.project-image-link {
+    flex: 1;
+    max-width: 50%;
+}
+
+.project-image {
+    flex: 1;
+    max-width: 50%;
+    border-radius: 20px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
+
+.project-image:hover {
+    transform: scale(1.03);
+    box-shadow: 0 15px 30px rgba(0,0,0,0.15); 
+}
+
+.snaic {
+    max-width: 400px; 
+}
+
+.charity {
+    max-width: 550px;
+}
+
+.github-link-container {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
+.github-link {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.2s;
+}
+
+.github-link:hover {
+    background-color: #555;
+}
+
+.intro-container {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    padding: 40px;
+    max-width: 1200px;
+    margin: 40px auto;
+}
+
+.intro-text { flex: 1; text-align: left; }
+.intro-text h3 { border-bottom: 1px solid #334; }
+
+.intro-image {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+}
+
+.tamu-logo { max-width: 120px; height: auto; }
+.profile-pic { max-width: 500px; height: auto; border-radius: 20px; }
+
+.intro-text h1 { font-size: 52px; margin-bottom: 8px;}
+.intro-text h2 { font-size: 26px; margin-top: 0; margin-bottom: 24px; font-weight: 400;}
+.intro-text h3 { font-size: 20px; font-style: italic; font-weight: 500; padding-bottom: 5px; margin-bottom: 16px;}
+.intro-text p { font-size: 18px; line-height: 1.6; }
+
+.resume-container {
+    max-width: 850px;
+    margin: 0 auto 20px auto;
+    border: 1px solid #ccc;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+}
+
+.resume-container iframe {
+    display: block;
+    width: 100%;
+    height: 1100px;
+    border: none;
+}
+
+.download-container {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.download-button {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #0d2c54;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.2s;
+}
+
+.download-button:hover {
+    background-color: #1a4a8a;
+}
+
+.skills-container {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    max-width: 1000px;
+    margin: 0 auto 60px auto;
+    padding: 0 40px;
+}
+
+.skills-column h3 {
+    font-size: 24px;
+    border-bottom: 2px solid #0d2c54;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.skills-column ul {
+    list-style-type: '✓ ';
+    padding-left: 20px;
+}
+
+.skills-column li {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.service-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
+    max-width: 1200px;
+    margin: 0 auto 60px auto;
+    padding: 0 40px;
+}
+
+.service-card {
+    background-color: #ffffff;
+    border: 1px solid #ddd;
+    border-radius: 12px;
+    padding: 25px;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+}
+
+.service-card h2 {
+    font-size: 24px;
+    margin-top: 0;
+}
+
+.service-card a {
+    display: block; 
+    margin-bottom: 20px;
+}
+
+.service-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: transform 0.3s ease; 
+}
+
+.service-card a:hover img {
+    transform: scale(1.05);
+}
+
+.service-card p {
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: left;
+}
+
+
+@media (max-width: 1200px) {
+    .service-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 800px) {
+    .service-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
+
+.button-container {
+    position: fixed;
+    bottom: 1.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+}
+
+#themeSwitcher {
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #500000;
+    border: 2px solid #3d0000;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.2s ease, transform 0.2s ease;
+}
+
+#themeSwitcher:hover {
+    background-color: #6a0000;
+}
+
+#themeSwitcher:active {
+    transform: scale(0.98);
+}
+
+input { display: none; }
+
+#welcomeMessage {
+    font-size: 130%;
+    position: fixed;
+    bottom: 2rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+}
+
+#welcomeMessage, #welcomeMessage figcaption, #welcomeMessage figcaption h1, #welcomeMessage figcaption h1 b {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin: 0;
+}
+
+#welcomeMessage figcaption { width: auto; z-index: 1; }
+
+#welcomeMessage figcaption::before, #welcomeMessage figcaption::after {
+    position: absolute;
+    background: #222;
+    width: 0%;
+    height: 0%;
+    content: "";
+    z-index: -1;
+}
+
+#welcomeMessage figcaption::after {
+    background: var(--gradient);
+    width: calc(100% + 3.1em);
+    height: calc(100% + 3.1em);
+    z-index: -2;
+}
+
+#welcomeMessage figcaption h1 {
+    text-transform: uppercase;
+    background: #500000;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 0.625em 1.25em, rgba(0, 0, 0, 0.23) 0px 0.375em 0.375em;
+    transition: all 0.1s ease-in-out;
+}
+
+#welcomeMessage figcaption h1:active {
+    transform: scale(0.93);
+    transition: all 0.05s ease-in-out;
+}
+
+#welcomeMessage figcaption h1::before, #welcomeMessage figcaption h1::after {
+    position: absolute;
+    white-space: nowrap;
+    font-size: 0.7em;
+    font-weight: 200;
+    transition: all 0.7s ease-in-out;
+}
+
+#welcomeMessage figcaption h1::before {
+    top: -4.3em;
+    right: 2em;
+    content: "Click to close";
+    font-weight: 400;
+    color: #666;
+    opacity: 0;
+}
+
+#welcomeMessage figcaption h1::after { bottom: -3em; transition: all 0.3s ease-in-out; }
+
+#welcomeMessage figcaption h1 label {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    cursor: pointer;
+}
+
+#welcomeMessage figcaption h1 label:nth-child(2) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1em;
+    height: 1em;
+    right: 0;
+    top: -3em;
+    background: transparent;
+    color: #666;
+    outline: 1px solid #666;
+    padding: 5px;
+    opacity: 0;
+    z-index: 998;
+}
+
+#welcomeMessage figcaption h1 b {
+    width: 2em;
+    height: 2em;
+    background: #500000;
+    color: #FFFFFF;
+    user-select: none;
+}
+
+#welcomeMessage figcaption h1 b a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    z-index: 1;
+    transition: all 0.35s ease-in-out;
+}
+
+#welcomeMessage figcaption h1 b a:focus::before {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #555;
+    border-radius: 0.3em;
+    content:"";
+    z-index: -1;
+}
+
+#welcomeMessage figcaption h1 b a:focus::after {
+    position: absolute;
+    width: calc(100% + 0.05em);
+    height: calc(100% + 0.05em);
+    background: var(--gradient);
+    border-radius: 0.3em;
+    content:"";
+    z-index: -2;
+    animation: spinny 5s linear infinite;
+}
+
+#welcomeMessage figcaption h1 b a:active::after { filter: blur(5px); }
+@keyframes spinny { 0% { transform: rotateZ(0deg); border-radius: 0.3em; } 50% { border-radius: 1em; } 100% { transform: rotateZ(360deg); border-radius: 0.3em; } }
+
+#welcomeMessage figcaption h1 b a svg {
+    position: relative;
+    width: 55%;
+    height: auto;
+    fill: #fff;
+    filter: grayscale(100%) brightness(1.2);
+    transform: rotateY(-180deg);
+    transition: all 200ms linear;
+}
+
+#welcomeMessage figcaption h1 b a:hover svg {
+    filter: grayscale(0%) brightness(1);
+    transition: all 200ms ease-in-out;
+}
+
+#welcomeMessage figcaption h1 b a:focus svg {
+    filter: grayscale(0%) brightness(1);
+    transform: rotateY(-180deg) scale(0.9);
+    transition: all 70ms linear;
+}
+
+#toggleOpen:checked ~ #welcomeMessage { font-size: 100%; }
+#toggleOpen:checked ~ #welcomeMessage figcaption::before { width: calc(100% + 3em); height: calc(100% + 3em); border-radius: 0.7em; transition: all 0.7s ease-in-out; }
+#toggleOpen:checked ~ #welcomeMessage figcaption::after { width: calc(100% + 6em); height: calc(100% + 6em); border-radius: 1em; transition: all 0.7s ease-in-out; }
+#toggleClose:checked ~ #welcomeMessage figcaption::before, #toggleClose:checked ~ #welcomeMessage figcaption::after { transition: all 0.7s ease-in-out; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 { background: transparent; box-shadow: none; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1:active { transform: none; }
+#toggleClose:checked ~ #welcomeMessage figcaption h1 { background: transparent; transition: all 0.05s ease-in-out; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1::before { opacity: 1; transition: all 0.7s ease-in-out; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1::after { opacity: 0; transition: all 0.7s ease-in-out; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 label:first-of-type { display: none; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 label:last-of-type { z-index: 999; opacity: 1; transition: all 0.7s ease-in-out; }
+
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 b {
+    color: #555;
+    border-radius: 0.3em;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 0.625em 1.25em, rgba(0, 0, 0, 0.23) 0px 0.375em 0.375em;
+    transition: all 0.35s ease-in-out;
+}
+
+#toggleClose:checked ~ #welcomeMessage figcaption h1 b { transition: all 0.35s ease-in-out; transition-delay: 0.35s; animation: welcomeClose 0.7s ease-in-out 1; animation-fill-mode: forwards; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 b:not(:first-of-type, :last-of-type) { animation: welcome 0.7s ease-in-out 1; animation-fill-mode: forwards; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 b:first-of-type { animation: welcomeFirst 0.7s ease-in-out 1; animation-fill-mode: forwards; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 b:last-of-type { animation: welcomeLast 0.7s ease-in-out 1; animation-fill-mode: forwards; }
+#toggleClose:checked ~ #welcomeMessage figcaption h1 b:first-of-type { animation: welcomeCloseFirst 0.7s ease-in-out 1; animation-fill-mode: forwards; }
+#toggleClose:checked ~ #welcomeMessage figcaption h1 b:last-of-type { animation: welcomeCloseLast 0.7s ease-in-out 1; animation-fill-mode: forwards; }
+#toggleClose:checked ~ #welcomeMessage figcaption h1 b::after { opacity: 0; transition: all 0.35s ease-in-out; }
+#toggleOpen:checked ~ #welcomeMessage figcaption h1 b a { opacity: 1; transition: all 0.35s ease-in-out; transition-delay: 0.35s; }
+
+@keyframes welcome { 0% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } 20% { transform: rotateY(0deg); width: 2em; height: 2em; } 80% { transform: rotateY(180deg); width: 3em; height: 3em; } 100% { margin: 0 1.5em; transform: rotateY(180deg); width: 3em; height: 3em; } }
+@keyframes welcomeFirst { 0% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } 20% { transform: rotateY(0deg); width: 2em; height: 2em; } 80% { transform: rotateY(180deg); width: 3em; height: 3em; } 100% { margin: 0 1.5em 0 0; transform: rotateY(180deg); width: 3em; height: 3em; } }
+@keyframes welcomeLast { 0% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } 20% { transform: rotateY(0deg); width: 2em; height: 2em; } 80% { transform: rotateY(180deg); width: 3em; height: 3em; } 100% { margin: 0 0 0 1.5em; transform: rotateY(180deg); width: 3em; height: 3em; } }
+@keyframes welcomeClose { 0% { margin: 0 1.5em; transform: rotateY(180deg); width: 3em; height: 3em; } 20% { transform: rotateY(180deg); width: 3em; height: 3em; } 80% { transform: rotateY(0deg); width: 2em; height: 2em; } 100% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } }
+@keyframes welcomeCloseFirst { 0% { margin: 0 1.5em 0 0; transform: rotateY(180deg); width: 3em; height: 3em; } 20% { transform: rotateY(180deg); width: 3em; height: 3em; } 80% { transform: rotateY(0deg); width: 2em; height: 2em; } 100% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } }
+@keyframes welcomeCloseLast { 0% { margin: 0 0 0 1.5em; transform: rotateY(180deg); width: 3em; height: 3em; } 20% { transform: rotateY(180deg); width: 3em; height: 3em; } 80% { transform: rotateY(0deg); width: 2em; height: 2em; } 100% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } }
+
+@media (max-width: 1270px) { #toggleOpen:checked ~ #welcomeMessage { font-size: 80%; } }
+@media (max-width: 1000px) { #toggleOpen:checked ~ #welcomeMessage { font-size: 60%; } }
+@media (max-width: 800px) {
+    #toggleOpen:checked ~ #welcomeMessage { font-size: 100%; }
+    #toggleOpen:checked ~ #welcomeMessage figcaption h1 { flex-direction: column; }
+    #welcomeMessage figcaption h1::before { content: "Close"; }
+    @keyframes welcome { 0% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } 20% { transform: rotateY(0deg); width: 2em; height: 2em; } 80% { transform: rotateY(180deg); width: 3em; height: 3em; } 100% { margin: 1em 0; transform: rotateY(180deg); width: 3em; height: 3em; } }
+    @keyframes welcomeFirst { 0% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } 20% { transform: rotateY(0deg); width: 2em; height: 2em; } 80% { transform: rotateY(180deg); width: 3em; height: 3em; } 100% { margin: 0 0 1em 0; transform: rotateY(180deg); width: 3em; height: 3em; } }
+    @keyframes welcomeLast { 0% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } 20% { transform: rotateY(0deg); width: 2em; height: 2em; } 80% { transform: rotateY(180deg); width: 3em; height: 3em; } 100% { margin: 1em 0 0 0; transform: rotateY(180deg); width: 3em; height: 3em; } }
+    @keyframes welcomeClose { 0% { margin: 1em 0em; transform: rotateY(180deg); width: 3em; height: 3em; } 20% { transform: rotateY(180deg); width: 3em; height: 3em; } 80% { transform: rotateY(0deg); width: 2em; height: 2em; } 100% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } }
+    @keyframes welcomeCloseFirst { 0% { margin: 0 0 1em 0 !important; transform: rotateY(180deg); width: 3em; height: 3em; } 20% { transform: rotateY(180deg); width: 3em; height: 3em; } 80% { transform: rotateY(0deg); width: 2em; height: 2em; } 100% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } }
+    @keyframes welcomeCloseLast { 0% { margin: 1em 0 0 0 !important; transform: rotateY(180deg); width: 3em; height: 3em; } 20% { transform: rotateY(180deg); width: 3em; height: 3em; } 80% { transform: rotateY(0deg); width: 2em; height: 2em; } 100% { margin: 0 0; transform: rotateY(0deg); width: 2em; height: 2em; } }
+}
+
+@media (max-width: 650px) { #welcomeMessage { font-size: 100%; } }
+@media (max-width: 500px) { #welcomeMessage { font-size: 80%; } #toggleOpen:checked ~ #welcomeMessage { font-size: 100%; } }
+@media (max-width: 400px) { #welcomeMessage { font-size: 65%; } }
+
+
